# backups-i-trust

./: .gitignore  CHANGELOG.md  Makefile  README.md  backup.py  install.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg
migrations/: 202108240905.json  202108242230.json  202108242303.json  202108250016.json  202108250611.json  202108290254.json  202203050207.json  202203192016.json  202303070451.json  202304200317.json
scripts/: init.sh
src/: .cowpyrc  awsclient.py  backup.py  bcktdb.py  columnizer.py  common.py  config.py  database.py
terraform/: frankenback_s3.tf  sample_s3_bucket.tf  terraform.tfstate
test/: .cowpyrc  .frankbackrc
test/terraform/: frankenback_s3.tf
