[metadata]
name = backups-i-trust
version = 0.0.1
author = Tim Palko
author_email = tim@palkosoftware.com
description = Budget-focused cloud-targeted file backup and restore command-line tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpalko/backups-i-trust
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNUv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bckt = backup:main

[options.packages.find]
where = src
